--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -520,14 +520,163 @@
     }
 }
 
+@media screen and (max-width: 1559px) {
+    .sp_btn_1::after {
+        right: -38px;
+    }
+}
+
 @media screen and (max-width: 1533px) {
     .chart {
         max-width: 750px;
     }
 }
 
-@media screen and (max-width: 1419px) {
+@media screen and (max-width: 1497px) {
+    .sp_btn_1::after {
+        right: -48px;
+    }
+
+    .sp_contante2 {
+        max-width: 160px;
+    }
+
+    .sp_contante1 {
+        max-width: 100px;
+    }
+}
+
+@media screen and (max-width: 1431px) {
     .chart {
         max-width: 650px;
     }
+
+    .sp_btn_1::after {
+        right: -34px;
+    }
 }
+
+@media screen and (max-width: 1332px) {
+    .middle-sidenavbar-inner {
+        gap: 11px;
+    }
+
+    .down-corner {
+        gap: 10px;
+    }
+
+    .up-corner {
+        gap: 10px;
+    }
+
+    .sections {
+        gap: 10px;
+    }
+
+    .s6_img {
+        max-width: 687px;
+    }
+}
+
+@media screen and (max-width: 1323px) {
+    .section_4 {
+        padding: 30px 30px;
+    }
+}
+
+@media screen and (max-width: 1308px) {
+    .middle-sidenavbar-inner {
+        flex-flow: row wrap;
+    }
+
+    .right-miidle-sidebar-inner {
+        display: flex;
+        gap: 30px;
+        justify-content: space-around;
+        width: 100%;
+        padding: 20px 50px;
+    }
+
+    .bundle {
+        margin: auto 0;
+    }
+
+    .overview {
+        margin-top: 0;
+    }
+
+    .chart {
+        max-width: 940px;
+        margin: 0 auto;
+    }
+
+    .sp_btn_1::after {
+        right: -26px;
+    }
+}
+
+@media screen and (max-width: 1320px) {
+    .sp_btn_1::after {
+        right: -38px;
+    }
+}
+
+@media screen and (max-width: 1261px) {
+    .sp_btn_1::after {
+        right: -30px;
+    }
+}
+
+@media screen and (max-width: 1217px) {
+    .sp_btn_1::after {
+        right: -25px;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .sp_btn_1::after {
+        right: -37px;
+    }
+
+    .sp_contante2 {
+        max-width: 180px;
+    }
+
+    .sp_contante1 {
+        max-width: 120px;
+    }
+}
+
+@media screen and (max-width: 1149px) {
+    .sp_btn_1::after {
+        right: -28px;
+    }
+}
+
+@media screen and (max-width: 1090px) {
+    .right-miidle-sidebar-inner {
+        flex-flow: row wrap;
+    }
+
+    .bundle {
+        width: 100%;
+        max-width: 500px;
+        margin: 0 auto;
+    }
+
+    .sections {
+        gap: 35px;
+        flex-flow: row wrap;
+        justify-content: center;
+    }
+
+    .overview {
+        width: 100%;
+        max-width: 465px;
+    }
+
+    .sp_btn_1::after {
+        right: -57px;
+    }
+}
+
