--- a/src/Components/Styles/Demo.css
+++ b/src/Components/Styles/Demo.css
@@ -8,6 +8,14 @@
     display: flex;
 }
 
+.item-name {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
 main {
     width: 100%;
     padding: 20px;
@@ -23,9 +31,9 @@ main {
 
 .top_section123 {
     display: flex;
-    align-items: center;
+    gap: 15px;
     padding: 20px 15px;
-    justify-content: space-between;
+
 }
 
 .logo123 {
@@ -54,7 +62,7 @@ main {
 .link123:hover {
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 110.41%);
     transition: all 0.5s;
-    color: #fff;
+    color: #FEA700;
 }
 
 .active {
@@ -71,8 +79,97 @@ main {
 .sidebar123 {
     width: 100%;
     margin: 0 auto;
-    text-align: center;
     background: #252525;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     color: #fff;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100vh;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: #fff;
+}
+
+.main {
+    display: flex;
+    height: 100vh;
+}
+
+/* .sidebar123 {
+    width: 260px;
+    flex-shrink: 0;
+    background-color: rgba(22, 22, 22, 1);
+    height: 100%;
+    overflow: auto;
+} */
+
+
+.sidebar-item {
+    padding: .75em 1em;
+    display: block;
+    transition: background-color .15s;
+    border-radius: 5px;
+}
+
+.sidebar-item:hover {
+    background-color: rgba(255, 255, 255, .1);
+}
+
+.sidebar-title {
+    display: flex;
+    font-size: 1.2em;
+    gap: 15px;
+}
+
+.sidebar-title span i {
+    display: inline-block;
+    width: 20px;
+}
+
+.sidebar-title .toggle-btn {
+    cursor: pointer;
+    transition: transform .3s;
+}
+
+.sidebar-item.open>.sidebar-title .toggle-btn {
+    transform: rotate(180deg);
+}
+
+.sidebar-content {
+    padding-top: .25em;
+    height: 0;
+    overflow: hidden;
+}
+
+.sidebar-item.open>.sidebar-content {
+    height: auto;
+}
+
+.sidebar-item.plain {
+    color: #fff;
+    text-decoration: none;
+}
+
+.sidebar-item.plain:hover {
+    text-decoration: underline;
+}
+
+.sidebar-item.plain i {
+    display: inline-block;
+}
+
+/* .item-title,
+.sidebar-item.plain {
+    font-size: 12px;
+} */
