--- a/src/Components/Styles/Demo.css
+++ b/src/Components/Styles/Demo.css
@@ -77,11 +77,12 @@ main {
 }
 
 .sidebar123 {
-    width: 100%;
+    width: 300px;
     margin: 0 auto;
     background: #252525;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     color: #fff;
+    max-width: 300px;
 }
 
 * {
@@ -114,6 +115,14 @@ body {
     overflow: auto;
 } */
 
+.open{
+    width: 300px;
+}
+
+.non-open{
+    display: none;
+}
+
 
 .sidebar-item {
     padding: 10px 15px;
@@ -130,6 +139,7 @@ body {
     display: flex;
     font-size: 1.2em;
     gap: 15px;
+    cursor: pointer;
 }
 
 .sidebar-title span i {
@@ -169,6 +179,6 @@ body {
     display: inline-block;
 }
 
-/* .item-title {
-    font-size: 16px;
-} */
+.item-title {
+    display: block;
+}
